# bbcli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
src/bbcli/: api.py  cli.py  config.py  git_context.py
src/bbcli/commands/: auth.py  pr.py
